# samplex_aeissa

./: .gitignore  .gitmodules  README.md  SECURITY.md
Espressif/ESP32-C6-DevKitC-1/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
Espressif/ESP32-C6-DevKitC-1/cmake/: riscv-gcc-toolchain.cmake
Espressif/ESP32-C6-DevKitC-1/components/threadx/: CMakeLists.txt
Espressif/ESP32-C6-DevKitC-1/components/threadx/include/: FreeRTOSConfig.h  tx_user.h
Espressif/ESP32-C6-DevKitC-1/main/: CMakeLists.txt  board_init.c  board_init.h  mock_sensor.c  sensor.h  tx_initialize_low_level.S
Espressif/ESP32-C6-DevKitC-1/main/demos/threadx_basic/: main.c
OpenHW/CORE-V-MCU/: README.md
OpenHW/CORE-V-MCU/cli-test/: CMakeLists.txt  FreeRTOSConfig.h  README.md  SDKConfig.h  libc_shim.c  tx_user.h
OpenHW/CORE-V-MCU/cli-test/app/: app_commands.c  app_commands.h  main.c
OpenHW/CORE-V-MCU/cli-test/compat_include/: setjmp.h  string.h
OpenHW/CORE-V-MCU/cli-test/libs/cli/source/: cli_platform.c
OpenHW/CORE-V-MCU/cli-test/scripts/: build.sh  deploy.sh
OpenHW/CORE-V-MCU/cli-test/tests/: CMakeLists.txt  test_cli_commands.c
OpenHW/CORE-V-MCU/cli-test/tests/mock/: cli_mock.c  cli_mock.h
OpenHW/CORE-V-MCU/slideshow/: CMakeLists.txt  README.md  SDKConfig.h
OpenHW/CORE-V-MCU/slideshow/app/: ansi.c  ansi.h  big_digits.c  big_digits.h  input.c  input.h  main.c  progress_bar.c  progress_bar.h  screen_openhw.c  screen_regs.c  screen_stats.c  screen_temp.c  screen_threadx.c  slideshow.c  slideshow.h  uart_io.c  uart_io.h
OpenHW/CORE-V-MCU/slideshow/compat_include/: stdio.h  stdlib.h
OpenHW/CORE-V-MCU/slideshow/scripts/: build.sh  deploy.sh
OpenHW/scripts/: install_deps.sh  setup_opella.sh
STMicroelectronics/NUCLEO_F401RE/: CMakeLists.txt  NOTICE.md  README.md
STMicroelectronics/NUCLEO_F401RE/app/: CMakeLists.txt
STMicroelectronics/NUCLEO_F401RE/app/common/: board_init.c  board_init.h  console.c  newlib_syscalls.c
STMicroelectronics/NUCLEO_F401RE/app/common/startup/: NUCLEO_F401RE.ld  startup_stm32f401xe.s  tx_initialize_low_level.S
STMicroelectronics/NUCLEO_F401RE/app/common/stm32cubef4/: stm32f4xx_hal_msp.c
STMicroelectronics/NUCLEO_F401RE/app/starter/: cloud_config.h  main.c
STMicroelectronics/NUCLEO_F401RE/lib/: CMakeLists.txt
STMicroelectronics/NUCLEO_F401RE/lib/nucleo_bsp/: CMakeLists.txt  nucleo_bsp.c  nucleo_bsp.h
STMicroelectronics/NUCLEO_F401RE/lib/stm32cubef4/: CMakeLists.txt
STMicroelectronics/NUCLEO_F401RE/lib/stm32cubef4/config/: stm32f4xx_hal_conf.h
STMicroelectronics/NUCLEO_F401RE/lib/threadx/: tx_user.h
STMicroelectronics/NUCLEO_F401RE/scripts/: build.ps1  build.sh
STMicroelectronics/STM32F767ZI-Nucleo/: CMakeLists.txt  NOTICE.md  README.md
STMicroelectronics/STM32F767ZI-Nucleo/app/: ansi_colors.h  board_init.c  board_init.h  console.c  ethernet_phy.c  ethernet_phy.h  main.c  stm32f7xx_hal_msp.c
STMicroelectronics/STM32F767ZI-Nucleo/app/demos/network_station/: CMakeLists.txt  hts221_reg.c  hts221_reg.h  main.c  mock_sensor.c  mqtt_config.h  nx_user.h  sensor.h  sensor_driver.c
STMicroelectronics/STM32F767ZI-Nucleo/app/demos/netx_echo/: CMakeLists.txt  main.c  nx_stm32_eth_config.h  nx_user.h  test_echo_simple.ps1  test_echo_simple.sh
STMicroelectronics/STM32F767ZI-Nucleo/app/demos/threadx_basic/: CMakeLists.txt  main.c
STMicroelectronics/STM32F767ZI-Nucleo/app/startup/: STM32F767ZITx_FLASH.ld  tx_initialize_low_level.S
STMicroelectronics/STM32F767ZI-Nucleo/cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake  arm-gcc-cortex-m7.cmake  arm-gcc-cortex-toolchain.cmake
STMicroelectronics/STM32F767ZI-Nucleo/lib/threadx/: tx_user.h
STMicroelectronics/STM32F767ZI-Nucleo/scripts/: build.ps1  build.sh  fetch_sdk.ps1  fetch_sdk.sh
scripts/: update-libs.sh
